force-app/main/default/objects/ProducerServicesSettings__c/ProducerServicesSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Producer Services Settings</label>
</CustomObject>