force-app/main/default/objects/ProducerServicesSettings__c/fields/Company_Reporting_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Reporting_Number__c</fullName>
    <label>Company Reporting Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>