force-app/main/default/objects/ProducerServicesSettings__c/fields/Taxpayer_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_ID_Number__c</fullName>
    <label>Taxpayer ID Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>